<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="add"
            type="com.dhxxn.untilwhenaos.view.AddActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AddActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/add_close_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/add_toolbar"
            app:layout_constraintEnd_toStartOf="@+id/add_save_btn"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="@+id/add_toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.516"
            app:srcCompat="@drawable/back"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/AddCloseBtn" />

        <TextView
            android:id="@+id/add_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/saveBtn"
            android:textColor="@color/purple"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="@+id/add_toolbar"
            app:layout_constraintEnd_toEndOf="@+id/add_toolbar"
            app:layout_constraintTop_toTopOf="@+id/add_toolbar"
            app:layout_constraintVertical_bias="0.432" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:id="@+id/view"
                        android:layout_width="140dp"
                        android:layout_height="12dp"
                        android:layout_marginTop="22dp"
                        android:alpha="0.5"
                        android:background="@color/blue"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.06"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/add_when_St"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/when"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.063"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <DatePicker
                        android:id="@+id/add_ddayPicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.496"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/add_when_St" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintBottom_toTopOf="@+id/view2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/add_ddayPicker"
                        app:layout_constraintVertical_bias="0.294" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="110dp"
                        android:layout_height="12dp"
                        android:layout_marginTop="16dp"
                        android:alpha="0.5"
                        android:background="@color/blue"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.054"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/add_what_st" />

                    <TextView
                        android:id="@+id/add_what_st"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                        android:text="@string/what"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.065"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/add_ddayPicker" />


                    <EditText
                        android:id="@+id/add_editContent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="15dp"
                        android:ems="10"
                        android:hint="@string/input"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.109"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/add_what_st" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/gray"
                        app:layout_constraintBottom_toTopOf="@+id/add_today_st"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/add_editContent" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="130dp"
                        android:layout_height="12dp"
                        android:layout_marginTop="16dp"
                        android:alpha="0.5"
                        android:background="@color/blue"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.059"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/add_today_st" />

                    <TextView
                        android:id="@+id/add_today_st"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                        android:text="@string/startToday"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.07"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/add_editContent" />

                    <DatePicker
                        android:id="@+id/add_startPicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.496"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/add_radioGroup" />

                    <RadioGroup
                        android:id="@+id/add_radioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/add_today_st">

                        <RadioButton
                            android:id="@+id/add_today_radio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/yes" />

                        <RadioButton
                            android:id="@+id/add_notToday_radio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/no" />
                    </RadioGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>